<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>java-23</artifactId>
   <name>java-23</name>
   <packaging>jar</packaging>

   <parent>
      <groupId>cn.tuyucheng.taketoday.java-core-modules</groupId>
      <artifactId>java-core-modules</artifactId>
      <version>1.0.0</version>
   </parent>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <release>${maven.compiler.release}</release>
               <compilerArgs>--enable-preview</compilerArgs>
               <source>${maven.compiler.source.version}</source>
               <target>${maven.compiler.target.version}</target>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <properties>
      <maven.compiler.source.version>23</maven.compiler.source.version>
      <maven.compiler.target.version>23</maven.compiler.target.version>
      <maven.compiler.release>23</maven.compiler.release>
   </properties>
</project>